# find-replace-rename

./: .gitignore  CHANGELOG.md  README.md  file_renamer.cmd  file_renamer.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: demo_findonly.ps1
tests/: test_cli_flows.py  test_find_only.py
