[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-renamer"
version = "0.3.0"
description = "Recursive file renamer with interactive/CLI modes, backups, and JSON logging"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "Monostronomy", email = "monostronomy@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
]
keywords = ["rename", "files", "cli", "backup", "logging"]

[project.scripts]
file-renamer = "file_renamer:main"
